force-app/main/default/objects/Quote_Document_Condition__mdt/Quote_Document_Condition__mdt.object-meta.xml
<CustomObject>
    <description>One validated Quote Line condition used to decide whether a Table exists and which lines belong to it. Conditions in one set are AND; ordered sets are OR.</description>
    <label>Quote Document Condition</label>
    <pluralLabel>Quote Document Conditions</pluralLabel>
</CustomObject>