force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Compare_Value__c.field-meta.xml
<CustomField>
    <fullName>Compare_Value__c</fullName>
    <inlineHelpText>Value to compare. For In, separate approved values with semicolons. Leave blank only for Is Blank and Is Not Blank.</inlineHelpText>
    <label>Compare Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>