force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Condition_Set__c.field-meta.xml
<CustomField>
    <fullName>Condition_Set__c</fullName>
    <inlineHelpText>Conditions sharing this number are all required. A line may match any complete condition set.</inlineHelpText>
    <label>Condition Set</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>