force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>