force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Field_Path__c</fullName>
    <inlineHelpText>A Quote Line field or relationship path validated against the Salesforce schema before it enters a query.</inlineHelpText>
    <label>Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>