force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Equals</fullName><default>true</default><label>Equals</label></value>
            <value><fullName>Not Equals</fullName><default>false</default><label>Not Equals</label></value>
            <value><fullName>Is Blank</fullName><default>false</default><label>Is Blank</label></value>
            <value><fullName>Is Not Blank</fullName><default>false</default><label>Is Not Blank</label></value>
            <value><fullName>In</fullName><default>false</default><label>In List</label></value>
            <value><fullName>Greater Than</fullName><default>false</default><label>Greater Than</label></value>
            <value><fullName>Greater Or Equal</fullName><default>false</default><label>Greater Than or Equal</label></value>
            <value><fullName>Less Than</fullName><default>false</default><label>Less Than</label></value>
            <value><fullName>Less Or Equal</fullName><default>false</default><label>Less Than or Equal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>