force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>Stable evaluation and display order inside one condition set.</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>