force-app/main/default/objects/Quote_Document_Condition__mdt/fields/Table_Definition__c.field-meta.xml
<CustomField>
    <fullName>Table_Definition__c</fullName>
    <label>Table Definition</label>
    <referenceTo>Quote_Document_Table_Def__mdt</referenceTo>
    <relationshipLabel>Composition Conditions</relationshipLabel>
    <relationshipName>Composition_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>